# haladocpp

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp  mainwindow.cpp  mainwindow.h  map.qml  toggleslider.h  turapi.cpp  turapi.h
